fixed navbar bug, added z-index

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -5,6 +5,7 @@
   height: 70px;
   position: sticky;
   top: 0;
+  z-index: 10;
 }
 
 .navbar-lewagon .navbar-collapse {
